[package]
name = "gpt-html"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
axum-extra = "0.7"
eventsource-stream = "0.2"
futures = "0.3"
# lazy_static = "1"
# openai = "1.0.0-alpha.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# strum_macros = "0.24"
tokio = { version = "1", features = ["full"] }
# tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["auth", "fs", "validate-request"] }

[dev-dependencies]
# anyhow = "1"
